--- a/src/styles.css
+++ b/src/styles.css
@@ -27,3 +27,10 @@ html{
     display: flex;
     flex-direction: column;
 }
+
+
+body{
+    width: 100%;
+    height: 100%;
+    margin-left:0;
+}
